tests/machine/x/hs/map_literal_dynamic.error

/workspace/mochi/tests/machine/x/hs/map_literal_dynamic.hs:113:22: error:
    • Couldn't match expected type: t0 -> Maybe a2 -> String
                  with actual type: [Char]
    • The function ‘show’ is applied to three value arguments,
        but its type ‘(a0 -> Maybe a0 -> a0) -> [Char]’ has only one
      In the expression:
        show fromMaybe (error "missing") (Map.lookup "a" m)
      In the first argument of ‘unwords’, namely
        ‘[show fromMaybe (error "missing") (Map.lookup "a" m),
          show fromMaybe (error "missing") (Map.lookup "b" m)]’
    |
113 |   putStrLn (unwords [show fromMaybe (error "missing") (Map.lookup "a" m), show fromMaybe (error "missing") (Map.lookup "b" m)])
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/map_literal_dynamic.hs:113:75: error:
    • Couldn't match expected type: t1 -> Maybe a2 -> String
                  with actual type: [Char]
    • The function ‘show’ is applied to three value arguments,
        but its type ‘(a1 -> Maybe a1 -> a1) -> [Char]’ has only one
      In the expression:
        show fromMaybe (error "missing") (Map.lookup "b" m)
      In the first argument of ‘unwords’, namely
        ‘[show fromMaybe (error "missing") (Map.lookup "a" m),
          show fromMaybe (error "missing") (Map.lookup "b" m)]’
    |
113 |   putStrLn (unwords [show fromMaybe (error "missing") (Map.lookup "a" m), show fromMaybe (error "missing") (Map.lookup "b" m)])
    |                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Context around line 113:
  111| main :: IO ()
  112| main = do
  113|   putStrLn (unwords [show fromMaybe (error "missing") (Map.lookup "a" m), show fromMaybe (error "missing") (Map.lookup "b" m)])
  114| 
